# FilesFormat

./: README.md  README.rst  _config.yml  ex_python.pfcf  example.pfcf  example.txt  index.md  main.py  pfcf.py  pyproject.toml  python_compile.py  qiskit_compile.py  wolfram_compile.py
examples/: circuit.nqa  ex_python.pfcf  ex_qiskit.pfcf  ex_wolfram.pfcf  example.pfcf  example.txt
nqs/: code.py  read.py  utils.py
pfcf/: __init__.py  code.py  files.py  parser.py  read.py  utils.py
pfcf/codel/: python.py  qiskit.py
