[tool.poetry]
name = "repl_python3_FilesFormat"
version = "0.1.0"
description = ""
authors = ["PythonForChange <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
wolframclient = "^1.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
